intermediate, working on JavaLang